--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "express": "^4.17.1",
     "express-minify": "^1.0.0",
     "morgan": "^1.10.0",
-    "node-mailer": "^0.1.1",
     "nodemailer": "^6.4.6",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
+    "imagemin": "^7.0.1",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5"
